// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site admin user book roster test (0 items) Basic render test 1`] = `
<div
  className="site-admin-course-roster"
>
  <div
    className="empty-state"
  >
    No users have access to this book.
  </div>
</div>
`;

exports[`Site admin user book roster test (5 items) Basic render test 1`] = `
<div
  className="site-admin-course-roster"
>
  <div
    className="site-admin-card"
  >
    <ul
      className="unadorned-list"
    >
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-7 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-8 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-9 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-10 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-11 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Site admin user book roster test (25 items) Basic render test 1`] = `
<div
  className="site-admin-course-roster"
>
  <div
    className="site-admin-card"
  >
    <ul
      className="unadorned-list"
    >
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-7 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-8 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-9 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-10 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-11 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-0 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-1 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-2 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-3 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-1 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-2 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-3 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-4 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-5 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-6 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-7 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-8 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-9 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-10 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-8 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-9 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-10 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-11 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-0 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="pathLink nti-link-to-path"
          to="#"
        >
          <div
            className="site-admin-course-roster-item"
          >
            <img
              className="avatar avatar-color-1 user-avatar"
              src="someAvatarURL"
            />
            <div
              className="info"
            >
              <span
                className="username username"
                rel="author"
              />
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
  <div
    className="site-admin-table-pager"
  >
    <div
      className="page selected"
      onClick={[Function]}
    >
      1
    </div>
    <div
      className="page"
      onClick={[Function]}
    >
      2
    </div>
  </div>
</div>
`;
